--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 </head>
 
 <body>
+  <style>
+    html {
+      scroll-behavior: smooth;
+      scroll-padding: var(--scroll-padding, 5rem);
+    }
+  </style>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 
