--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="/public/css/app.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="shortcut icon" href="./public/assets/icon/favicon-logo.ico" type="image/x-icon">
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
     rel="stylesheet">
@@ -15,12 +16,12 @@
 </head>
 
 <body>
-  <style>
+  <!-- <style>
     html {
       scroll-behavior: smooth;
       scroll-padding: var(--scroll-padding, 5rem);
     }
-  </style>
+  </style> -->
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 
